# custom-escrow-backend-solanasmartcontract

./: .gitignore  Anchor-soon.toml  Anchor.toml  COMPLETE_DEPLOYMENT_DETAILS.md  COMPLETE_DEVELOPMENT_GUIDE.md  EXECUTION_PLAN.md  FINAL_STATUS_REPORT.md  LEARNING_ROADMAP.md  MULTI_NETWORK_GUIDE.md  MULTI_PROJECT_PLATFORM_TODO.md  OPTIMIZATION_ANALYSIS.md  OPTIMIZATION_EXAMPLE.md  PHASE1_EXECUTION_COMPLETE.md  PRODUCTION_READINESS_ROADMAP.md  PROJECT_CREDENTIALS.md  PROJECT_VISION.md  README.md  SOON_DEPLOYMENT.md  SOON_DEPLOYMENT_GUIDE_OPTIMIZED.md  SOON_DEPLOYMENT_READY.md  SOON_MAINNET_DEPLOYMENT_INSTRUCTIONS.md  package-lock.json  package.json  tsconfig.json
configs/: solana-devnet.toml  solana-mainnet.toml  soon-devnet.toml  soon-network.toml
deployments/solana/types/: escrow.ts
docs/: CRITICAL_PROJECT_INFORMATION.md  DEPLOYMENT_SUCCESS.md  FRONTEND_DEVELOPMENT_PROMPT.md  USER_FLOW_GUIDE.md
programs/escrow/: Cargo.toml
programs/escrow/src/: lib.rs
programs/multi-presale/: Cargo.toml
programs/multi-presale/src/: lib.rs  lib.rs.backup
scripts/: verify-soon-deployment.js
tests/: devnet-deployment-test.ts  escrow-deployment.ts  escrow-integration.ts  escrow-unit.ts
tests/multi-presale/: completion-tests.ts  completion-validation.ts  phase1-core.ts
tests/shared/: cross-network-compatibility.ts  escrow-validation.ts
tests/soon/: soon-deployment-test.ts  soon-integration-test.ts
